crates/sid-widgets/src/settings/snapshots/sid_widgets__settings__theme_picker__tests__theme_picker_render_focused.snap
---
source: crates/sid-widgets/src/settings/theme_picker.rs
expression: s
---
┌ Theme ───────────────────────────────┐
│> * cosmos                            │
│  o cosmos-light                      │
│  o dusk                              │
│  o void                              │
│┌────────────────────────────────────┐│
││✦ cosmos ✦                          ││
││  primary accent row                ││
││  muted secondary text              ││
││  success ok                        ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││Enter to apply  ·  Esc to cancel    ││
│└────────────────────────────────────┘│
└──────────────────────────────────────┘
border_top_left: fg=Rgb(212, 65, 65) modifier=NONE
title_first_char: symbol="T" fg=Rgb(230, 230, 240) modifier=BOLD
